# Sample-Rate-Converter

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
sampleconverter/: CMakeLists.txt  build.gradle
sampleconverter/src/main/: AndroidManifest.xml
sampleconverter/src/main/cpp/: SampleConverter.cpp  SampleConverter.h  converter.cpp
sampleconverter/src/main/cpp/common/: handle.h
sampleconverter/src/main/cpp/oboe/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/apps/OboeTester/app/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/apps/fxlab/app/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/LiveEffect/src/main/cpp/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/RhythmGame/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/RhythmGame/src/main/cpp/: Game.cpp
sampleconverter/src/main/cpp/oboe/samples/RhythmGame/test/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/drumthumper/src/main/cpp/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/hello-oboe/src/main/cpp/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/iolib/src/main/cpp/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/samples/parselib/src/main/cpp/: CMakeLists.txt
sampleconverter/src/main/cpp/oboe/tests/: CMakeLists.txt
sampleconverter/src/main/java/com/github/nihad/sampleconverter/: SampleConverter.kt  Utils.java
sampleconverter/src/main/java/com/github/nihad/sampleconverter/common/: IHandle.kt
(+3 files in other folders)
